# operations-agent

./: .env.example  .gitignore  PRD.md  README.md  context.md  pyproject.toml
operations_agent/: __init__.py  agent.py  anthropic_client.py  cli.py  clients.py  config.py  duplicates.py  embeddings.py  errors.py  eval_cli.py  evidence.py  fixtures.py  gate.py  index.py  jira_client.py  models.py  redact.py  render.py  replay.py  retry.py  seed.py  seed_cli.py  slack_adapter.py  slack_client.py  summary.py
operations_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
operations_agent/evaluation/: __init__.py  cases.py  golden_set.json  harness.py  judge.py  report.py  scorer.py
tests/: test_agent.py  test_config.py  test_duplicates.py  test_eval.py  test_evidence_gate_flow.py  test_gate.py  test_index.py  test_jira_client.py  test_redact.py  test_reflection.py  test_render.py  test_replay.py  test_retry.py  test_slack_adapter.py  test_summary_slack.py
traces/: sample-redacted.json
