[project]
name = "operations-agent"
version = "0.1.0"
description = "AI Product Operations Agent — a bug-triage reasoning agent"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
triage = "operations_agent.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["operations_agent*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
