[project]
name = "operations-agent"
version = "0.1.0"
description = "AI Product Operations Agent — a bug-triage reasoning agent"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
]

[project.optional-dependencies]
# Local embeddings for duplicate detection. Optional so tests / basic triage
# don't pull in torch; install with `pip install -e ".[embeddings]"`.
embeddings = [
    "sentence-transformers>=2.7",
]
dev = [
    "pytest>=8.0",
]

[project.scripts]
triage = "operations_agent.cli:main"
ops-seed = "operations_agent.seed_cli:seed_main"
ops-reindex = "operations_agent.seed_cli:reindex_main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["operations_agent*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
